--- a/universityou/views/layout.ejs
+++ b/universityou/views/layout.ejs
@@ -11,31 +11,29 @@
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
-    <!--
+    <!--SCRIPTS-->
+    <script src="/bower_components/angular/angular.js"></script>
+    <script src="/bower_components/angular-route/angular-route.js"></script>
+    <script src="/bower_components/angular-animate/angular-animate.js"></script>
+    <!--SCRIPTS END-->
+    
+    <script src="js/app.js"></script>
 
-      Stylesheets
-      ========================
+    <script src="js/services/user.js"></script>
+    <script src="js/services/subjects.js"></script>
+    <script src="js/services/courses.js"></script>
 
-      You can link any CSS, LESS, or image files in your `assets` directory
-      as you would normally: using <link/> tags.
-      
-    -->
+    <script src="js/controllers/intro.js"></script>
+    <script src="js/controllers/subject.js"></script>
+    <script src="js/controllers/course.js"></script>
+    <script src="js/controllers/class.js"></script>
+    <script src="js/controllers/authentication.js"></script>
 
-    <!--
-
-      Support for LESS included by default
-      ================================================
-
-      LESS files are automatically compiled when they change using the Gruntfile
-      located in the top-level of this Sails app.  If you run into issues with styles
-      not reloading, check the Sails log output in your console for LESS compilation errors.
-      If necessary, shut down and then lift your app again.
-      
-    -->
+    <link rel="stylesheet" href="styles/style.css">
 
   </head>
 
-  <body>
+  <body ng-app="universityApp">
 
     <!-- Include the view file for the current controller/route -->
     <%- body %>
