--- a/universityou/views/layout.ejs
+++ b/universityou/views/layout.ejs
@@ -17,7 +17,7 @@
     <script src="/bower_components/angular-animate/angular-animate.js"></script>
     <!--SCRIPTS END-->
     
-    <script src="js/app.js"></script>
+    <script src="js/angularapp.js"></script>
 
     <script src="js/services/user.js"></script>
     <script src="js/services/subjects.js"></script>
@@ -33,7 +33,7 @@
 
   </head>
 
-  <body ng-app="universityApp">
+  <body ng-app="uniApp">
 
     <!-- Include the view file for the current controller/route -->
     <%- body %>
