I SEE WORDS ON PAGE D:

--- a/universityou/views/layout.ejs
+++ b/universityou/views/layout.ejs
@@ -15,21 +15,19 @@
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-route/angular-route.js"></script>
     <script src="/bower_components/angular-animate/angular-animate.js"></script>
+    <script src="/linker/js/app.js"></script>
+    <script src="/linker/js/angularapp.js"></script>
+    <script src="/linker/js/controllers/intro.js"></script>
+    <script src="/linker/js/sails.io.js"></script>
+    <script src="/linker/js/services/classes.js"></script>
+    <script src="/linker/js/services/courses.js"></script>
+    <script src="/linker/js/services/subjects.js"></script>
+    <script src="/linker/js/services/user.js"></script>
+    <script src="/linker/js/socket.io.js"></script>
     <!--SCRIPTS END-->
-    
-    <script src="js/angularapp.js"></script>
-
-    <script src="js/services/user.js"></script>
-    <script src="js/services/subjects.js"></script>
-    <script src="js/services/courses.js"></script>
-
-    <script src="js/controllers/intro.js"></script>
-    <script src="js/controllers/subject.js"></script>
-    <script src="js/controllers/course.js"></script>
-    <script src="js/controllers/class.js"></script>
-    <script src="js/controllers/authentication.js"></script>
-
-    <link rel="stylesheet" href="styles/style.css">
+    <!--STYLES-->
+    <link rel="stylesheet" href="/linker/styles/style.css">
+    <!--STYLES END-->
 
   </head>
 
