--- a/universityou/assets/partial/intro.html
+++ b/universityou/assets/partial/intro.html
@@ -7,7 +7,7 @@
 </div>
 <div id="intro">
     <h1>Welcome to <b>UniversitYou</b></h1>
-    <div class="video" data-hash="2YBtspm8j8M"></div>
+    <div class="video" ng-bind-html="yt('2YBtspm8j8M')"></div>
     <div class="row">
         <a class="btn btn-outlined col-sm-4 col-sm-offset-4">Get Started for Free</a>
     </div>
@@ -16,8 +16,6 @@
     <h2>Free, open education<small>Available at the tip of your fingers.</small></h2>
 </div>
 <footer>
-    <div class="row">
-        <div class="pull-left">Copyright 2014</div>
-        <div class="pull-right">Terms of Service</div>
-    </div>
+    <div class="pull-left">Copyright 2014</div>
+    <div class="pull-right">Terms of Service</div>
 </footer>
