--- a/universityou/assets/linker/styles/style.less
+++ b/universityou/assets/linker/styles/style.less
@@ -1,1 +1,65 @@
 @import '../../bower_components/bootstrap/less/bootstrap.less';
+
+@font-family-sans-serif: "museo-sans";
+
+
+#intro {
+    background: url('../../images/introbg.png');
+    text-transform: uppercase;
+    text-align: center;
+
+    .btn-outlined {
+        border: 2px solid #fff;
+        color: #fff;
+        font-size: 1.25em;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        .transition(0.3s);
+
+        &:hover {
+            color: #000;
+            border-color: #000;
+        }
+    }
+
+    h1 {
+        font-size: 3em;
+        padding: 50px 0 25px;
+        color: #00;
+        font-weight: 300;
+
+        b {
+            font-weight: 500;
+            color: #fff;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+        }
+    }
+}
+
+.banner {
+    padding: 20px;
+
+    h2 {
+        text-align: center;
+        font-size: 3em;
+        font-weight: 100;
+        margin: 0;
+
+        small {
+            display: block;
+            font-weight: 200;
+            font-size: 0.5em;
+        }
+    }
+
+    &.banner-light {
+        background: #f0f0f0;
+        border-bottom: 1px solid #ccc;
+    }
+}
+
+footer {
+    font-weight: 200;
+    padding: 10px;
+    color: #999;
+}
