--- a/universityou/assets/partial/intro.html
+++ b/universityou/assets/partial/intro.html
@@ -1,13 +1,6 @@
-<div class="navbar">
-    <img src="img/profile.jpg" alt="">
-    <img src="img/profile.jpg" alt="">
-    <img src="img/profile.jpg" alt="">
-    <img src="img/profile.jpg" alt="">
-    <img src="img/profile.jpg" alt="">
-</div>
 <div id="intro">
     <h1>Welcome to <b>UniversitYou</b></h1>
-    <div class="video" ng-bind-html="yt('2YBtspm8j8M')"></div>
+    <div class="video" ng-bind-html="yt('2YBtspm8j8M', {controls: 0, rel: 0, showinfo: 0})"></div>
     <div class="row">
         <a class="btn btn-outlined col-sm-4 col-sm-offset-4">Get Started for Free</a>
     </div>
