--- a/universityou/views/layout.ejs
+++ b/universityou/views/layout.ejs
@@ -18,6 +18,7 @@
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+
     <script src="js/angularapp.js"></script>
 
     <script src="js/services/user.js"></script>
@@ -25,6 +26,7 @@
     <script src="js/services/courses.js"></script>
     <script src="js/services/ytplayer.js"></script>
 
+    <script src="js/controllers/loginbar.js"></script>
     <script src="js/controllers/intro.js"></script>
     <script src="js/controllers/subject.js"></script>
     <script src="js/controllers/course.js"></script>
@@ -36,10 +38,33 @@
 
   </head>
 
-  <body ng-app="uniApp">
+  <body>
 
     <!-- Include the view file for the current controller/route -->
-    <%- body %>
+    <div ng-app="uniApp">
+      <div class="header">
+          <div class="container">
+              <a href="#/" class="logo">UniversitYou</a>
+              <div ng-controller="LoginbarCtrl">
+                <div ng-if="logged">
+                  Welcome {{ user.name }}!
+                </div>
+                <div ng-if="!logged">
+                  <div class="btn">
+                    Hello Guest!
+                    <ul>
+                      <li><a href="#/auth/login">Login</a></li>
+                      <li><a href="#/auth/register">Register</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+          </div>
+      </div>
+      <div ng-view>
+        
+      </div>
+    </div>
 
 
     <!--
