--- a/universityou/assets/linker/styles/style.less
+++ b/universityou/assets/linker/styles/style.less
@@ -31,6 +31,7 @@
         padding: 50px 0 25px;
         color: #00;
         font-weight: 300;
+        margin: 0;
 
         b {
             font-weight: 500;
@@ -63,7 +64,7 @@
 }
 
 .header {
-    margin: 0 0 -20px;
+    margin: 0;
     background: #222;
     line-height: 50px;
     text-align: center;
@@ -111,6 +112,7 @@
 
             a {
                 color: #ccc;
+                display: block;
             }
         }
     }
