--- a/universityou/views/layout.ejs
+++ b/universityou/views/layout.ejs
@@ -31,7 +31,7 @@
     <script src="js/controllers/subject.js"></script>
     <script src="js/controllers/course.js"></script>
     <script src="js/controllers/class.js"></script>
-    <script src="js/controllers/authentication.js"></script>
+    <script src="js/controllers/auth.js"></script>
 
     <script type="text/javascript" src="//use.typekit.net/icn8ggh.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
@@ -47,7 +47,7 @@
               <a href="#/" class="logo">UniversitYou</a>
               <div ng-controller="LoginbarCtrl">
                 <div ng-if="logged">
-                  Welcome {{ user.name }}!
+                  <div class="btn">Welcome {{ user.name }}!</div>
                 </div>
                 <div ng-if="!logged">
                   <div class="btn">
