Made auth prettyful

--- a/universityou/views/layout.ejs
+++ b/universityou/views/layout.ejs
@@ -41,7 +41,7 @@
   <body>
 
     <!-- Include the view file for the current controller/route -->
-    <div ng-app="uniApp">
+    <div ng-app="uniApp" id="content">
       <div class="header">
           <div class="container">
               <a href="#/" class="logo">UniversitYou</a>
@@ -65,6 +65,10 @@
         
       </div>
     </div>
+    <footer>
+        <div class="pull-left">Copyright 2014</div>
+        <div class="pull-right" onclick="alert('Lol yeah right, this is an MVP')">Terms of Service</div>
+    </footer>
 
 
     <!--
