--- a/universityou/assets/linker/styles/style.less
+++ b/universityou/assets/linker/styles/style.less
@@ -1,7 +1,54 @@
 @import '../../bower_components/bootstrap/less/bootstrap.less';
 
 @font-family-sans-serif: "museo-sans";
+@brand-primary: #fac564;
 
+// and disabled options for all buttons
+.button-variant(@color; @background; @border) {
+  color: #666;
+  background: none;
+  border-color: @border;
+  border-width: 2px;
+
+  &:hover,
+  &:focus,
+  &:active,
+  &.active,
+  .open .dropdown-toggle& {
+    color: @color;
+        border-color: darken(@border, 12%);
+  }
+  &.disabled,
+  &[disabled],
+  fieldset[disabled] & {
+    &,
+    &:hover,
+    &:focus,
+    &:active,
+    &.active {
+          border-color: @border;
+    }
+  }
+
+  .badge {
+    color: @background;
+    background-color: @color;
+  }
+}
+
+html, body {
+    height: 100%;
+}
+#content {
+    min-height: 100%;
+    margin-bottom: -40px;
+
+    &:after {
+        content: "";
+        display: block;
+        height: 40px;
+    }
+}
 
 #intro {
     background: url('../../images/introbg.png');
@@ -118,6 +165,37 @@
     }
 }
 
+.half-yel {
+    position: relative;
+
+    &:before {
+        content: "";
+        display: block;
+        background: url('../../images/introbg.png');
+        width: 100%;
+        height: 150px;
+        top: -20px;
+        left: 0;
+        z-index: -2;
+        position: absolute;
+    }
+
+    h1 {
+        color: #fff;
+        text-align: center;
+        font-weight: 100;
+        text-transform: uppercase;
+        text-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
+    }
+    .half-yel-container {
+        background: #fff;
+        padding: 20px 20px 0;
+        border-radius: 8px;
+        box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
+        margin-bottom: 50px;
+    }
+}
+
 .logo {
     float: left;
     display: block;
@@ -132,4 +210,10 @@ footer {
     font-weight: 200;
     padding: 10px;
     color: #999;
+
+    &:after {
+        clear: both;
+        content: "";
+        display: block;
+    }
 }
