--- a/universityou/assets/linker/styles/style.less
+++ b/universityou/assets/linker/styles/style.less
@@ -115,6 +115,8 @@ html, body {
     background: #222;
     line-height: 50px;
     text-align: center;
+    position: relative;
+    z-index: 1000;
 
     img {
         border-radius: 50%;
@@ -206,10 +208,66 @@ html, body {
     margin: 6px 0;
 }
 
+#sidebar {
+    position: fixed;
+    top: 60px;
+    left: 0px;
+    padding: 0;
+    bottom: 0;
+    background: #333;
+    margin: 0;
+    z-index: 100;
+
+    a {
+        display: block;
+        padding: 10px;
+        font-size: 1.2em;
+        font-weight: 200;
+        color: #fff;
+        border-bottom: 1px solid #262626;
+        border-top: 1px solid #444;
+
+        li:last-child & {
+            border-bottom: none;
+        }
+
+        span {
+            max-width: 0px;
+            display: inline-block;
+            overflow: hidden;
+            position: relative;
+            top: 0.4em;
+            left: 0.4em;
+            .transition(0.3s);
+        }
+
+        &:hover {
+            color: #000;
+            background: #fac564;
+            border-color: #fac564;
+            text-shadow: 0 1px 3p rgba(0, 0, 0, 0.25);
+        }
+    }
+
+    &:hover a span {
+        max-width: 500px;
+        padding: 0 15px 0 0;
+    }
+
+    i {
+        width: 1.5em;
+        line-height: 1.5em;
+        text-align: center;
+        border-radius: 50%;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5), 0 -1px 0 rgba(255, 255, 255, 0.3);
+    }
+}
+
 footer {
     font-weight: 200;
     padding: 10px;
     color: #999;
+    padding-left: 56px;
 
     &:after {
         clear: both;
