--- a/universityou/assets/partial/login.html
+++ b/universityou/assets/partial/login.html
@@ -1,8 +1,8 @@
 <div class="half-yel">
-    <div class="container half-yel">
+    <div class="container">
         <h1>Enter UniversitYou</h1>
         <div class="col-md-6 col-sm-offset-3 half-yel-container">
-            <form role="form" class="form-horizontal" ng-submit="register()">
+            <form role="form" class="form-horizontal" ng-submit="login()">
                 <div class="alert alert-{{ message[0] }}" ng-if="message" ng-click="message = null">
                     {{ message[1] }}
                 </div>
