--- a/universityou/assets/linker/styles/style.less
+++ b/universityou/assets/linker/styles/style.less
@@ -69,10 +69,6 @@ html, body {
         }
     }
 
-    .video > * {
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
-    }
-
     h1 {
         font-size: 3em;
         padding: 50px 0 25px;
@@ -85,6 +81,13 @@ html, body {
             color: #fff;
             text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
         }
+    }
+}
+.video {
+    text-align: center;
+
+    > * {
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
     }
 }
 
@@ -260,6 +263,81 @@ html, body {
         text-align: center;
         border-radius: 50%;
         box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5), 0 -1px 0 rgba(255, 255, 255, 0.3);
+    }
+}
+
+.related {
+    padding: 0;
+
+    li {
+        padding: 0;
+        white-space: nowrap;
+        list-style-type: none;
+        display: table-cell;
+        margin: 0;
+        text-align: center;
+        color: #999;
+        width: 1%;
+        position: relative;
+    }
+
+    li:last-child a:after {
+        display: none;
+    }
+
+    a {
+        display: block;
+        width: 10px;
+        height: 10px;
+        border: 1px solid #ccc;
+        border-radius: 50%;
+        margin: 20px auto;
+        background: #fff;
+
+        span {
+            position: absolute;
+            left: 0;
+            right: 0;
+            color: #aaa;
+        }
+
+        &.primary, &:hover {
+            span {
+                color: #333;
+            }
+
+            background: @brand-primary;
+            border-color: darken(@brand-primary, 10%);
+        }
+
+        &:hover span {
+            display: block;
+        }
+
+        &:after {
+            position: absolute;
+            content: "";
+            display: block;
+            width: 99%;
+            left: 50%;
+            border-bottom: 1px dashed #ccc;
+            top: 50%;
+            z-index: -2;
+            height: 1px;
+        }
+        &:before {
+            position: relative;
+            width: 18px;
+            left: -5px;
+            top: -5px;
+            height: 18px;
+            border: 1px solid #ccc;
+            content: "";
+            display: block;
+            border-radius: 50%;
+            z-index: -1;
+            background: #fff;
+        }
     }
 }
 
