--- a/universityou/views/layout.ejs
+++ b/universityou/views/layout.ejs
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.min.css">
     
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/lodash/dist/lodash.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
 
@@ -24,6 +25,7 @@
 
     <script src="js/services/user.js"></script>
     <script src="js/services/subjects.js"></script>
+    <script src="js/services/classes.js"></script>
     <script src="js/services/courses.js"></script>
     <script src="js/services/ytplayer.js"></script>
 
