--- a/universityou/views/layout.ejs
+++ b/universityou/views/layout.ejs
@@ -12,15 +12,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/min/production.css">
+    <link rel="stylesheet" href="/linker/styles/style.css">
     <!--STYLES END-->
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.min.css">
-
+    <script src="/js/lib/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="/js/lib/jsCarousel.js"></script>
+
 
 
     <script src="js/angularapp.js"></script>
