Youtube stuff works. Goodnight

--- a/universityou/assets/partial/intro.html
+++ b/universityou/assets/partial/intro.html
@@ -3,7 +3,7 @@
 </div>
 <div id="intro">
     <h1>Welcome to <b>UniversitYou</b></h1>
-    <div class="video" ng-bind-html="yt('2YBtspm8j8M', {controls: 0, rel: 0, showinfo: 0})"></div>
+    <div class="video" ng-bind-html="yt.show('2YBtspm8j8M', {controls: 0, rel: 0, showinfo: 0})"></div>
     <div class="row">
         <a class="btn btn-outlined col-sm-4 col-sm-offset-4">Get Started for Free</a>
     </div>
