Sidebar scrolling issue

--- a/universityou/views/layout.ejs
+++ b/universityou/views/layout.ejs
@@ -25,6 +25,7 @@
 
 
     <script src="js/angularapp.js"></script>
+    <script src="js/elements.js"></script>
 
     <script src="js/services/user.js"></script>
     <script src="js/services/subjects.js"></script>
