Completion meter on classes

--- a/universityou/assets/linker/styles/style.less
+++ b/universityou/assets/linker/styles/style.less
@@ -339,6 +339,10 @@ a.btn-custom-index{
                 color: #333;
             }
 
+            &:before {
+                border-color: #f8b333;
+            }
+
             background: @brand-primary;
             border-color: darken(@brand-primary, 10%);
         }
@@ -372,6 +376,12 @@ a.btn-custom-index{
             background: #fff;
         }
     }
+}
+
+.completion {
+    text-align: center;
+    font-weight: 300;
+    margin-top: 30px;
 }
 
 footer {
