--- a/universityou/assets/partial/class.html
+++ b/universityou/assets/partial/class.html
@@ -7,5 +7,6 @@
                 <a href="#/subject/{{ course.slug }}/{{ related_class.slug }}" ng-class="{primary: related_class.id == cls.id}"><span>{{ related_class.name }}</span></a>
             </li>
         </ul>
+        <h3 class="completion">You're {{ percent }}% finished with <a href="#/subject/{{ course.slug }}">{{ course.name }}</a></h3>
     </div>
 </div>
