--- a/universityou/assets/linker/styles/style.less
+++ b/universityou/assets/linker/styles/style.less
@@ -201,7 +201,33 @@ a.btn-custom-index{
     }
 }
 .top_videos{
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+}
+.dont_underline a:hover{
+    text-decoration: none;
+}
+.subject_wraper{
+    text-decoration: none;
+    color:#333;
+    border:solid thin lightgray;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
+    margin-bottom: 20px;
+    border-radius: 8px;
+    .subject_header{
+        text-align: center;
+        border-bottom: solid thin lightgray;
+    }
+    .subject_body{
+        text-align: center;
+        h4{
+            text-align: center;
+            text-transform:uppercase;
+        }
+        p{
+            padding: 0 20px;
+        }
+    }
+
 }
 .half-yel {
     position: relative;
