--- a/universityou/assets/linker/styles/style.less
+++ b/universityou/assets/linker/styles/style.less
@@ -504,6 +504,47 @@ a.btn-custom-index{
         }
     }
 }
+.subject-header {
+    display: block;
+    font-size: 1.5em;
+    color: #fff;
+    font-weight: 300;
+    padding: 10px;
+    overflow: hidden;
+
+    i {
+        position: relative;
+        font-size: 3em;
+        line-height: 0em;
+        margin: 0 0.2em 0 -0.333em;
+        top: 0.25em;
+    }
+
+    &:hover {
+        color: #000;
+    }
+}
+
+.subject-body {
+    padding: 0;
+
+    li {
+        list-style-type: none;
+    }
+
+    a {
+        display: block;
+        padding: 10px;
+        background: #eee;
+        color: #333;
+        border-top: 1px solid #f9f9f9;
+        border-bottom: 1px solid #ddd;
+
+        &:hover {
+            background: #ddd;
+        }
+    }
+}
 
 footer {
     font-weight: 200;
