--- a/universityou/assets/linker/styles/style.less
+++ b/universityou/assets/linker/styles/style.less
@@ -546,6 +546,39 @@ a.btn-custom-index{
     }
 }
 
+.course-subject-preview {
+    min-height: 200px;
+    background-size: contain;
+    background-position: center top;
+    background-repeat: no-repeat;
+    border-radius: 2px;
+}
+
+.course-subject-classlist {
+    padding: 0;
+
+    li {
+        list-style-type: none;
+    }
+
+    a {
+        color: #666;
+        display: block;
+        padding: 5px;
+        border-bottom: 1px solid #ccc;
+        font-weight: 300;
+    }
+}
+
+h2 a {
+    color: #333;
+
+    &:hover {
+        color: @brand-primary;
+        text-decoration: none;
+    }
+}
+
 footer {
     font-weight: 200;
     padding: 10px;
