--- a/universityou/views/layout.ejs
+++ b/universityou/views/layout.ejs
@@ -37,6 +37,7 @@
     <script src="js/controllers/loginbar.js"></script>
     <script src="js/controllers/sidebar.js"></script>
     <script src="js/controllers/intro.js"></script>
+    <script src="js/controllers/subject.js"></script>
     <script src="js/controllers/course.js"></script>
     <script src="js/controllers/class.js"></script>
     <script src="js/controllers/auth.js"></script>
