--- a/universityou/assets/partial/subject.html
+++ b/universityou/assets/partial/subject.html
@@ -1,36 +1,21 @@
 <div class="half-yel">
-    <div class="col-md-10 col-sm-offset-1 half-yel-container index">
-        <div class="row top_videos">
-            <div class="col-xs-8 col-xs-offset-2">
-                <div class="col-xs-3"><img src="http://placehold.it/125x125" alt=""></div>
-                <div class="col-xs-3"><img src="http://placehold.it/125x125" alt=""></div>
-                <div class="col-xs-3"><img src="http://placehold.it/125x125" alt=""></div>
-                <div class="col-xs-3"><img src="http://placehold.it/125x125" alt=""></div>
-            </div>
-        </div>
-
+    <div class="container">
         <div class="row">
-            <div class="col-xs-8 col-xs-offset-2 dont_underline">
-
-                <a href="#/{{subject.name}}"class="col-xs-6" ng-repeat="subject in subjects">
-                    <div class="subject_wraper">
-                        <div class="subject_header">
-                            <!-- <a href="#/{{ subject.slug }}"><i class="fa fa-{{ subject.style[0] }}" style="color:#{{ subject.style[1] }}"></i><span>{{ subject.name }}</span></a> -->
-                            ICON
-                        </div>
-                        <div class="subject_body">
-                            <h4>{{subject.name}}</h4>
-                            <p>
-                                {{subject.desc}}
-                            </p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-xs-2">
-                <p>
-
-                </p>
+            <h1 class="col-sm-12 course-heading">{{ subject.name }}</h1>
+        </div>
+        <div class="row">
+            <div class="col-sm-12" ng-repeat="course in subject.courses">
+                <div class="col-md-3">
+                    <div class="course-subject-preview" style="background-image:url('{{ yt.preview(course.classes[0].youtube, 0) }}')"></div>
+                </div>
+                <div class="col-md-9">
+                    <h2><a href="#/{{ subject.slug }}/{{ course.slug }}/">{{ course.name }} <small>Playing Time: {{ course.total_duration | niceSeconds }}</small></a></h2>
+                    <ul class="course-subject-classlist">
+                        <li ng-repeat="cls in course.classes">
+                            <a href="#/{{ subject.slug }}/{{ course.slug }}/{{ cls.slug }}"><i class="fa fa-play-circle"></i> {{ cls.name }}: <span>{{ cls.duration | niceSeconds }}</span></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
