Ads, layout fix

--- a/universityou/assets/partial/index.html
+++ b/universityou/assets/partial/index.html
@@ -27,11 +27,15 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <p>
-                        Ad Goes HereAd Goes HereAd Goes HereAd Goes HereAd Goes HereAd Goes HereAd Goes HereAd Goes HereAd Goes HereAd Goes HereAd Goes
-                        HereAd Goes HereAd Goes HereAd Goes HereAd Goes HereAd Goes HereAd Goes HereAd Goes HereAd Goes HereAd Goes HereAd Goes HereAd Goes
-                        HereAd Goes HereAd Goes Here
-                    </p>
+                    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                    <!-- universityou -->
+                    <ins class="adsbygoogle"
+                         style="display:inline-block;width:160px;height:600px"
+                         data-ad-client="ca-pub-3933552642850561"
+                         data-ad-slot="6460532084"></ins>
+                    <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
                 </div>
             </div>
         </div>
