--- a/universityou/assets/partial/intro.html
+++ b/universityou/assets/partial/intro.html
@@ -5,6 +5,6 @@
     <h1>Welcome to <b>UniversitYou</b></h1>
     <div class="video" ng-bind-html="yt.show('2YBtspm8j8M', {controls: 0, rel: 0, showinfo: 0})"></div>
     <div class="row">
-        <a class="btn btn-outlined col-sm-4 col-sm-offset-4">Get Started for Free</a>
+        <a class="btn btn-outlined col-sm-4 col-sm-offset-4" href="#/">Get Started for Free</a>
     </div>
 </div>
