--- a/universityou/views/layout.ejs
+++ b/universityou/views/layout.ejs
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/linker/styles/style.css">
+    <link rel="stylesheet" href="/min/production.css">
     <!--STYLES END-->
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.min.css">
@@ -80,6 +80,17 @@
       <div ng-view>
 
       </div>
+    </div>
+    <div class="text-center" style="margin-top: 30px;">
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- universityou2 -->
+      <ins class="adsbygoogle"
+           style="display:inline-block;width:728px;height:90px"
+           data-ad-client="ca-pub-3933552642850561"
+           data-ad-slot="7937265287"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
     </div>
     <footer>
         <div class="pull-left">Copyright 2014</div>
