Intro video, added missing deep clone on first call of stuff

--- a/universityou/assets/linker/styles/style.less
+++ b/universityou/assets/linker/styles/style.less
@@ -552,6 +552,10 @@ a.btn-custom-index{
     background-position: center top;
     background-repeat: no-repeat;
     border-radius: 2px;
+
+    span {
+        float: right;
+    }
 }
 
 .course-subject-classlist {
